# yips

./: .eslintrc.cjs  .gitignore  .yips_config.json  AGENT.md  AGENT.py  AGENTS.md  ARCHITECTURE_DIAGRAM.md  BIRTHCERT.md  CHANGELOG_YIPS.md  CLAUDE.md  Cargo.toml  IDENTITY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SPECIFICATIONS.md  build_binaries.ps1  build_binaries.sh  config.json  example_script.py  guessing_game.py  hello_world.py  install.ps1  install.sh  migrate_repo.ps1  migrate_repo.sh  notes.md  package-lock.json  package.json  postinstall.js  pyrightconfig.json  requirements.txt  startup.bat  startup.sh  test_output.txt  test_react.py  tsconfig.build.json  tsconfig.json  version.py  yips-core-windows.spec  (+4 more)
.claude/: settings.local.json
.gemini/: rules.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  gateway-hardening.yml  phase-6-musl-artifacts.yml  release.yml
.obsidian/: workspace.json
.yips/: metrics.json  preferences.json
.yips/memory/: 2026-01-31_03-44-57_first_conversation_with_yips.md  (+143 more)
author/: HUMAN.md
cli/: __init__.py  agent.py  color_utils.py  commands.py  completer.py  config.py  download_ui.py  harness.py  heartbeat.py  hw_utils.py  info_utils.py  installer_wizard.py  llamacpp.py  lmstudio.py  main.py  model_manager.py  root.py  setup.py  subprocess_utils.py  tool_execution.py  type_defs.py  ui_frames.py  ui_rendering.py  version.py
crates/yips-agent/: Cargo.toml
crates/yips-agent/src/: conductor.rs  engine.rs  envelope.rs  error.rs  event.rs  lib.rs
crates/yips-cli/: Cargo.toml
crates/yips-cli/src/: main.rs
crates/yips-core/: Cargo.toml
crates/yips-core/src/: config.rs  error.rs  ipc.rs  lib.rs  message.rs  tool.rs
crates/yips-daemon/: Cargo.toml
crates/yips-daemon/src/: main.rs  server.rs  session.rs
crates/yips-daemon/tests/: ipc_e2e.rs
crates/yips-gateway/: Cargo.toml
crates/yips-gateway/src/: bot_adapter.rs  config.rs  daemon_client.rs  discord_adapter.rs  error.rs  lib.rs  main.rs  orchestration.rs  policy.rs  runtime.rs  session_router.rs  telegram_adapter.rs
crates/yips-gateway/tests/: gateway_core.rs  gateway_signal_process.rs
crates/yips-llm/: Cargo.toml
crates/yips-llm/src/: client.rs  error.rs  lib.rs  stream.rs  types.rs
crates/yips-skills/: Cargo.toml
crates/yips-skills/src/: discovery.rs  error.rs  lib.rs  manifest.rs  runner.rs
crates/yips-tools/: Cargo.toml
crates/yips-tools/src/: error.rs  lib.rs  registry.rs
crates/yips-tools/src/tools/: edit_file.rs  grep.rs  list_dir.rs  mod.rs  read_file.rs  run_command.rs  write_file.rs
crates/yips-tui/: Cargo.toml
crates/yips-tui/src/: main.rs  state.rs  ui.rs
docs/: ARCHITECTURE_BLUEPRINT.md  DEVELOPER.md  README.md  architecture.md  changelog.md  contributing.md  ipc-client-inventory.md  ipc-compatibility.md  overview.md  progress-log.md  project-tree.md  rewrite.md  roadmap.md  stack.md
git_hooks/: pre-commit
memories/: 2026-01-31_03-56-21_file_editing_and_logging.md  2026-01-31_04-08-45_greeting_and_welcome.md  2026-02-01_17-32-33_this_is_a_recent_activity_update_test.md  2026-02-01_17-49-22_hello_there_friend.md  2026-02-01_18-24-15_katherines_session.md  2026-02-01_18-30-28_what_tools_do_you_have_at_your_disposal.md  2026-02-01_18-39-36_exit.md  2026-02-01_18-44-17_exit_please.md  2026-02-01_18-46-50_please_exit_the_program.md  2026-02-01_18-52-07_try_to_exit_the_program_for_me.md  2026-02-01_19-20-08_does_your_exit_invocation_work.md  2026-02-01_19-37-29_try_to_exit_on_your_own_3.md  2026-02-01_21-02-11_hello_there_3.md  2026-02-01_21-14-10_write_a_short_code_snippet_that_would_impress_most.md  2026-02-01_21-31-10_please_try_again.md  2026-02-01_21-33-29_pust_debug_logs.md  2026-02-01_21-37-42_write_a_long_paragraph.md  2026-02-01_21-39-17_post_long_paragraph.md  2026-02-01_21-47-02_generate_a_paragraph_explaining_your_skills.md  2026-02-01_21-58-14_write_a_test_paragraph_that_has_a_unique_title.md  2026-02-01_22-05-32_can_you_change_reprompt_from_an_invokeskill_to_an.md  2026-02-02_03-03-34_exit.md  2026-02-02_03-52-31_write_a_super_long_paragraph_about_bell_peppers.md  2026-02-02_12-59-42_hello.md  2026-02-02_13-09-40_test_test_one_two_3.md  2026-02-02_13-25-15_make_some_cute_emojis_for_me.md  2026-02-02_13-48-11_write_a_quick_story_about_yourself.md  2026-02-02_18-10-57_create_a_number_guessing_game_in_python_then_once.md  20260131_023835_session_20260131_0238.md  20260131_030904_session_20260131_0309.md  20260131_031805_session_20260131_0318.md
scripts/: migrate-progress-log.mjs  setup.bat  setup.ps1  setup.sh  setup_silent.ps1
skills/: EXIT.py  LEARN.py
src/: colors.ts  command-catalog.ts  commands.ts  conductor.ts  config.ts  downloader-state.ts  downloader-ui.ts  hook-runner.ts  hooks.ts  index.ts  input-engine.ts  llama-client.ts  llama-server.ts  memory-store.ts  messages.ts  model-downloader.ts  model-manager-state.ts  model-manager-ui.ts  model-manager.ts  prompt-composer.ts  repl.ts  session-store.ts  skills.ts  spinner.ts  title-box.ts  tool-executor.ts  tool-protocol.ts  tool-safety.ts  tui-input-routing.ts  tui.ts  types.ts  version.ts
system/: SPECIFICATIONS.md
test_folder/: test1.md  test2.md  test3.md
tests/: code-context.test.ts  colors.test.ts  command-catalog.test.ts  commands.test.ts  conductor.test.ts  config.test.ts  downloader-state.test.ts  downloader-ui.test.ts  hook-runner.test.ts  hooks.test.ts  input-engine.test.ts  llama-client.test.ts  llama-server.test.ts  memory-store.test.ts  messages.test.ts  model-downloader.test.ts  model-manager-state.test.ts  model-manager-ui.test.ts  model-manager.test.ts  prompt-box.test.ts  prompt-composer.test.ts  repl.test.ts  session-store.test.ts  skills.test.ts  spinner.test.ts  test_discord_bot_message_context.py  test_discord_session.py  test_discord_tools.py  test_gateway_runners.py  test_info_utils.py  test_type_defs.py  title-box.test.ts  token-counter.test.ts  tool-executor.test.ts  tool-protocol.test.ts  tool-safety.test.ts  tui-busy-indicator.test.ts  tui-code-context.test.ts  tui-history-render.test.ts  tui-input-routing.test.ts  (+4 more)
(+382 files in other folders)
