[package]
name = "yips-agent"
version.workspace = true
edition.workspace = true

[dependencies]
yips-core = { workspace = true }
yips-llm = { workspace = true }
yips-tools = { workspace = true }
yips-skills = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
