[package]
name = "yips-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "fs"] }
tracing = { workspace = true }
dirs = "6"
