[package]
name = "yips-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yips-gateway"
path = "src/main.rs"

[dependencies]
yips-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
