[package]
name = "yips-llm"
version.workspace = true
edition.workspace = true

[dependencies]
yips-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = "1"
