[package]
name = "yips-skills"
version.workspace = true
edition.workspace = true

[dependencies]
yips-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
tracing = { workspace = true }
