[package]
name = "yips-tools"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
yips-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
tracing = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
